[package]
name = "rs-refresh-ddns"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-cron-scheduler = "0.9"
reqwest = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }